# dip

./: Makefile  db.sqlite3  pyproject.toml
diplom/: forms.py  models.py  settings.py  urls.py  views.py
diplom/bid/: apps.py  forms.py  models.py  urls.py  views.py
diplom/bid/migrations/: 0001_initial.py  0002_alter_bid_client_alter_bid_date_and_more.py
diplom/charts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
diplom/charts/migrations/: 0001_initial.py
diplom/clients/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
diplom/clients/migrations/: 0001_initial.py  0002_alter_clients_first_name_alter_clients_last_name_and_more.py  0002_alter_clients_services_alter_clients_user_state.py  0003_alter_clients_bank.py  0004_alter_clients_date_of_birth_and_more.py
diplom/employees/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
diplom/employees/migrations/: 0001_initial.py
diplom/manager/: admin.py  apps.py  froms.py  models.py  views.py
diplom/manager/migrations/: 0001_initial.py  0002_alter_requests_client_delete_clients.py  0002_bank.py  0003_delete_services.py
diplom/orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
diplom/orders/migrations/: 0001_initial.py
diplom/reports/: apps.py  forms.py  models.py  urls.py  views.py
diplom/reports/migrations/: 0001_initial.py
diplom/services/: admin.py  apps.py  models.py  urls.py  views.py
diplom/services/migrations/: 0001_initial.py  0003_alter_services_date.py  (+1 more)
diplom/templates/: base.html  index.html  login.html  logout.html  user_register.html
(+31 files in other folders)
