[project]
name = "dip"
version = "0.1.0"
description = ""
authors = [
    {name = "Eugen980",email = "zaza980q@mail.ru"}
]
readme = "README.md"
package_name = [{include = "dip"}]

requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-bootstrap5 (>=24.3,<25.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
