[tool.poetry]
name = "dip"
version = "0.1.0"
description = ""
authors = ["Eugen980 <zaza980q@mail.ru>"]
readme = "README.md"
packages = [{include = "diplom"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^24.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
